--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
     <div>
       <label for="text">Number to multiply:</label>
-      <input type="text" id="1">
+      <input type="text" id="numberone">
     </div>
     <div>
-      <label for="text">2nd number to multiply: </label>
-      <input type="text" id="2">
+      <label for="text">2nd number to multiply:</label>
+      <input type="text" id="numbertwo">
     </div>
     <button id="button">Enter</button>
     <p id="answer"></p>
